# python-embree

./: .gitignore  README.md  pyproject.toml  setup.py
ci/: embree3.bash  embree3.ps1  embree3_linux.sh  embree3_windows.bat
src/embree_y/: embree.pyx
tests/: test_basic.py  test_embree.py
